updated bootstrap in attempt to fix scrollbar issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,4 +5,5 @@ body > #root > div {
 .App {
   display: flex;
   flex-direction: column;
+  background: var(--text-dark);
 }
